--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<h1> Hallo Welt! </h1>
+<div class="container-slideshow">
+    <img *ngIf="showImage" class="img-slideshow" src="assets/img/{{ images[currentImage] }}">
+</div>
