--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -10,7 +10,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    color: white;
     a {
         color: white;
         text-decoration: none;
@@ -23,4 +23,27 @@ header {
     img {
         height: 100px;
     }
+}
+
+.container-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+        font-size: 00.6em;
+    }
+}
+
+.darkLinks {
+    a {
+        color: black;
+        &:hover {
+            color: rgba(0,0,0,0.8)
+        }
+    }
+}
+
+.headerDark {
+    background-color: white;
+    box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
 }
