data-protection and imprint finished

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,9 +9,10 @@
         <p> Created my free logo at LogoMakr.com</p>
     </div>
     <div [class.darkLinks]="darkMode">
-        <a href="/">Home</a>
-        <a href="#">About me</a>
-        <a href="#">Projects</a>
+        <a routerLink="/">Home</a>
+        <a routerLink="/data-protection">Data protection</a>
+        <a href="#">About Me</a> 
+        <a href="#">Projects</a> 
         <a routerLink="/imprint">Imprint</a>
 
     </div>
