added about me and some details

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .content-container {
-    padding-left: 120px;
-    padding-right: 120px;
+    padding-left: 7vw;
+    padding-right: 7vw;
     padding-top: 120px;
 }
