--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,9 +10,9 @@
     </div>
     <div [class.darkLinks]="darkMode">
         <a routerLink="/">Home</a>
+        <a routerLink="/about-me">About Me</a> 
+        <a routerLink="/projects">Projects</a> 
         <a routerLink="/data-protection">Data protection</a>
-        <a href="#">About Me</a> 
-        <a href="/projects">Projects</a> 
         <a routerLink="/imprint">Imprint</a>
 
     </div>
