--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,18 +3,23 @@
         <img src="assets/img/texel.jpg">
     </div>
     <div class="aboutMeTxt">
-        <h1>About me </h1><br>
-        Ich bin ein motivierter, frischgebackener Frontend Developer, meine Freizeit verbringe ich am liebsten draußen im Grünen mit meinen 2 treuen Begleitern. <br>
         <br>
         <br>
+        <span class="aboutMeHeader">About me </span><br>
         <br>
-        HTML <br>
-        CSS<br>
-        JavaScript<br>
-        Wordpress<br>
-        Angular <br>
-        SCRUM <br>
-        GITHub <br>
-
+        <p> Ich bin ein motivierter, frischgebackener Front-End Developer,<br> meine Freizeit verbringe ich mit meinen
+            Vierbeinen im Grünen. <br>
+            <span class="underline-transparent">About me </span><br>
+            <br>
+            <br>
+            <br>
+            HTML <br>
+            CSS<br>
+            JavaScript<br>
+            Wordpress<br>
+            Angular <br>
+            SCRUM <br>
+            GITHub <br>
+        </p>
     </div>
 </div>
