--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -4,8 +4,8 @@ header {
     right: 0;
     top: 0;
     height: 120px;
-    padding-left: 120px;
-    padding-right: 120px;
+    padding-left: 5vw;
+    padding-right: 5vw;
     z-index: 1;
     display: flex;
     align-items: center;
@@ -15,6 +15,7 @@ header {
         color: white;
         text-decoration: none;
         margin-left: 32px;
+        
         font-size: 1.2em;
         &:hover {
             color: rgb(229, 231, 116);
@@ -44,7 +45,8 @@ header {
     }
 }
 
-.headerDark {
+
+/*.headerDark {
     background-color: white;
     box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
-}
+}*/
