minor changes on about me and changed data protection

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,19 +7,20 @@
         <br>
         <span class="aboutMeHeader">About me </span><br>
         <br>
-        <p> Ich bin ein motivierter, frischgebackener Front-End Developer,<br> meine Freizeit verbringe ich mit meinen
-            Vierbeinen im Grünen. <br>
-            <span class="underline-transparent">About me </span><br>
-            <br>
-            <br>
-            <br>
-            HTML <br>
-            CSS<br>
-            JavaScript<br>
-            Wordpress<br>
-            Angular <br>
-            SCRUM <br>
-            GITHub <br>
+        <p> Ich bin ein motivierter, frischgebackener Front-End Developer. </p>
+        <p> Meine Freizeit verbringe ich mit meinen Vierbeinern im Grünen. </p>
+        <span class="underline-transparent">About me </span><br>
+        <br>
+        <br>
+        <br>
+        <p>
+        HTML <br>
+        CSS<br>
+        JavaScript<br>
+        Wordpress<br>
+        Angular <br>
+        SCRUM <br>
+        GITHub <br>
         </p>
     </div>
 </div>
