added links to social media and git on about-Me

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-menu [darkMode]="router.url !== '/'"></app-menu>
 <div [class.content-container]="router.url !== '/'">
-<router-outlet ></router-outlet>
+   
+    <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
