--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,5 +1,5 @@
 header {
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
@@ -11,6 +11,7 @@ header {
     align-items: center;
     justify-content: space-between;
     color: white;
+    
     a {
         color: white;
         text-decoration: none;
