--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -10,4 +10,7 @@ footer {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
+    p {
+        color: white;
+    }
 }
