added more stuff and url to portfolio

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -21,6 +21,8 @@
             Angular <br>
             SCRUM <br>
             GITHub <br>
+            Firebase <br>
+            Material Design <br>
         </p>
     
 
