--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,31 @@
-<p> Pokedex</p>
+<div class="container-pf">
+    <div (mouseover)="changeText=true" (mouseout)="changeText=false">
+
+        <div (mouseover)="changeText=true" class="kanban pf ">
+
+            <div (mouseover)="changeText=true"  class="text-pf" *ngIf="changeText"><h3>Join</h3><span>Tasks management system based on Eisenhower's urgent-important-principle.</span><h3>Try it yourself</h3></div>
+        </div>
+    </div>
+    <div (mouseover)="changeText2=true" (mouseout)="changeText2=false">
+
+        <div (mouseover)="changeText2=true" class="own-page pf ">
+
+            <div (mouseover)="changeText2=true"  class="text-pf" *ngIf="changeText2"><h2>Angular</h2><span>This is written with Angular.</span></div>
+        </div>
+    </div>
+    <div (mouseover)="changeText3=true" (mouseout)="changeText3=false">
+
+        <div (mouseover)="changeText3=true" class="rof pf ">
+
+            <div (mouseover)="changeText3=true"  class="text-pf" *ngIf="changeText3"><h3>Ring of Fire</h3><span>This is the popular drinking game!</span><a href="https://www.jonasregener.de/ringoffire/"><h3>Try it yourself</h3></a></div>
+        </div>
+    </div>
+    
+     <div  (mouseover)="changeText4=true" (mouseout)="changeText4=false">
+        
+        <div  (mouseover)="changeText4=true" class="poke pf ">
+        
+            <div   (mouseover)="changeText4=true"  class="text-pf" *ngIf="changeText4"><h3>Pokedex</h3><span >This is a classic collection of the first 151 Pokemon</span><a href="https://www.jonasregener.de/pokedex/"><h3>Try it yourself</h3></a></div>
+        </div>
+    </div>
+</div>
