reworked layout added, projects - still need fixes

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,7 +9,7 @@ footer {
 .container-xINGIT {
     display: flex;
     align-items: flex-end;
-    justify-content: space-between;
+    justify-content: space-around;
     p {
         color: white;
     }
