--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<header [class.headerDark]="darkMode">
+<header [class.headerDark]="darkMode" >
 
 
 
@@ -11,9 +11,9 @@
     <div [class.darkLinks]="darkMode">
         <a routerLink="/">Home</a>
         <a routerLink="/about-me">About Me</a> 
-        <a routerLink="/projects">Projects</a> 
-        <a routerLink="/data-protection">Data protection</a>
-        <a routerLink="/imprint">Imprint</a>
+        <a routerLink="/projects">Projekte</a> 
+        <a routerLink="/data-protection">Datenschutz</a>
+        <a routerLink="/imprint">Impressum</a>
 
     </div>
 </header>
