reworked projects component

--- a/src/app/data-protection/data-protection.component.html
+++ b/src/app/data-protection/data-protection.component.html
@@ -1,3 +1,23 @@
+<h1>Impressum</h1>
+
+<h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
+<p>Jonas Regener<br />
+Am Plattenbusch 48<br />
+51381 Leverkusen</p>
+
+<h2>Kontakt</h2>
+<p>Telefon: +49 (0) 1512 70 61 20 9<br />
+Telefax: Nicht vorhanden.<br />
+E-Mail: regener.jonas@gmail.com</p>
+
+
+<br>
+<br><br><br>
+
+
+
+
+
 <div class="margin-bottom"><h1>Datenschutz&shy;erkl&auml;rung</h1>
 <h2>1. Datenschutz auf einen Blick</h2>
 <h3>Allgemeine Hinweise</h3> <p>Die folgenden Hinweise geben einen einfachen &Uuml;berblick dar&uuml;ber, was mit Ihren personenbezogenen Daten passiert, wenn Sie diese Website besuchen. Personenbezogene Daten sind alle Daten, mit denen Sie pers&ouml;nlich identifiziert werden k&ouml;nnen. Ausf&uuml;hrliche Informationen zum Thema Datenschutz entnehmen Sie unserer unter diesem Text aufgef&uuml;hrten Datenschutzerkl&auml;rung.</p>
