--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,8 +12,7 @@
         <a routerLink="/">Home</a>
         <a routerLink="/about-me">About Me</a> 
         <a routerLink="/projects">Projekte</a> 
-        <a routerLink="/data-protection">Datenschutz</a>
-        <a routerLink="/imprint">Impressum</a>
-
+        <a routerLink="/data-protection">Impressum & Datenschutz</a>
+        
     </div>
 </header>
