--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,62 +1,113 @@
-.container-pf {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.pf {
-    display: flex;
-    width: 40vw;
-    margin-bottom: 100px;
-    justify-content: center;
-    align-items: center;
-}
-
-.kanban {
-    background-image: url("/assets/img/kanban.png");
-
-    background-size: cover;
-    height: 45vh;
-    width: 40vw;
-    margin-bottom: 100px;
-}
-
-.text-pf {
-    background-color: rgba(0, 0, 0, 0.7);
-    height: 45vh;
-    width: 40vw;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(400px, 1fr));
+    grid-gap: 40px;
+    margin-bottom: 120px;
 }
 
 
-.own-page {
-    background-image: url("/assets/img/own-page.jpg");
+.img-wrapper {
+    position: relative;
+    overflow: hidden;
 
-    background-size: cover;
-    height: 45vh;
-    width: 40vw;
-    margin-bottom: 100px;
+    img {
+        display: block;
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        object-fit: cover;
+        object-position: center;
+
+
+    }
+
+    .contain {
+
+        object-fit: contain !important;
+    }
+
+    .crm {
+        transform: scale(0.7);
+        object-fit: contain !important;
+    }
+
+
+    .fade {
+        opacity: 0;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+
+
+    .content {
+        position: absolute;
+        inset: 0;
+        font-size: 24px;
+        padding: 16px;
+        background: rgba(255, 255, 255, .4);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+    }
+
+
+
+
+
+    img,
+    .content {
+        transition: 225ms ease-in-out;
+    }
+
+
+
+
+
+
 }
 
-.rof {
-    background-image: url("/assets/img/rof-laptop.jpg");
+.img-wrapper:hover img.blur {
 
-    background-size: cover;
-    height: 45vh;
-    width: 40vw;
-    margin-bottom: 100px;
+    filter: blur(5px);
+
 }
 
-.poke {
-    background-image: url("/assets/img/handy-poke.png");
+.img-wrapper:hover img.gray {
 
-    background-size: cover;
-    height: 45vh;
-    width: 40vw;
-    margin-bottom: 100px;
+    filter: grayscale(1);
+
+}
+
+.img-wrapper:hover img.zoom {
+
+    transform: scale(1.1);
+
+}
+
+.img-wrapper .slide-left {
+    transform: translateX(-100%);
+
+
+}
+
+.img-wrapper:hover .slide-left {
+    transform: translateX(0);
+}
+
+.img-wrapper .slide-right {
+    transform: translateX(200%);
+
+
+}
+
+.img-wrapper:hover .slide-right {
+    transform: translateX(0);
+}
+
+.dogs {
+    transform: scale(0.5);
 }
