--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,8 +7,8 @@
         <br>
         <span class="aboutMeHeader">About me </span><br>
         <br>
-        <p> Ich bin ein motivierter, frischgebackener Front-End Developer. </p>
-        <p> Meine Freizeit verbringe ich mit meinen Vierbeinern im Grünen. </p>
+        <p> Ich bin ein junger, motivierter Front-End Entwickler. </p>
+        <p> Hier findest du einen Auszug meiner Fähigkeiten </p>
         <span class="underline-transparent">About me </span><br>
         <br>
         <br>
@@ -24,7 +24,9 @@
             Firebase <br>
             Material Design <br>
         </p>
-    
-
+        <br>
+        <br>
+        <br>
+<p class="margin"> Wenn ich nicht vor dem Computer sitze, verbringe ich meine Zeit am liebsten mit meinen beiden Hunden <a href="https://jonasregener.de/doggybook" target ="_blank" rel="noreferrer noopener">Paula und Taco</a> im Freien.</p>
     </div>
 </div>
