--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,35 +1,35 @@
 <div class="grid">
     <div class="img-wrapper">
         <img class="blur zoom gray" src="/assets/img/handy-poke.png">
-        <div class="content fade"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed temporibus suscipit
-            molestiae sit sequi in?
-            <button> TEst</button>
+        <div class="content fade column"><h2>Der klassische <a href="https://jonasregener.de/pokedex" target ="_blank" rel="noreferrer noopener"> Pokedex</a> </h2> <p>Dieses Projekt wurde mit Hilfe einer Rest-API, JavaScript, HTML und CSS erstellt.</p> 
         </div>
     </div>
-    <div class="img-wrapper">
+    <div class="img-wrapper" >
         <img class="blur zoom gray" src="\assets\img\own-page.jpg">
-        <div class="content fade"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reiciendis quos
-            voluptatem veniam mollitia corrupti?</div>
+        <div class="content fade"> <h3>Meine Website wurde mit Hilfe von Angular erstellt.</h3></div>
     </div>
     <div class="img-wrapper">
         <img class="blur zoom gray" src="\assets\img\rof-laptop.jpg">
-        <div class="content fade"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reiciendis quos
-            voluptatem veniam mollitia corrupti?</div>
+        <div class="content fade column"><h2><a href="https://jonasregener.de/ringoffire" target ="_blank" rel="noreferrer noopener"> Ring of Fire</a></h2> <p> Ring of Fire ist eine Angular App die mit Hilfe der Firebase Datenbank läuft</p></div>
     </div>
     <div class="img-wrapper">
         <img class="blur zoom gray" src="\assets\img\wissen.jpg">
-        <div class="content fade"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reiciendis quos
-            voluptatem veniam mollitia corrupti?</div>
+        <div class="content fade column">  <h2><a href="https://jonasregener.de/quizapp" target ="_blank" rel="noreferrer noopener">Teste dein Wissen zu Corona</a></h2><br>
+        In Kooperation mit JavaScript, HTML und CSS</div>
+    </div>
+    <div class="img-wrapper">
+        <img class="blur gray contain" src="\assets\img\kanban.png">
+        <div class="content slide-left"><h3> Ein <b> <h2><a href="https://jonasregener.de/Join/index.html" target ="_blank" rel="noreferrer noopener"> Kanbanboard</a></h2></b> das lediglich mit JavaScript, HTML und CSS programmiert wurde.</h3></div>
     </div>
     <div class="img-wrapper">
         <img class="blur gray contain crm" src="\assets\img\crm.png">
-        <div class="content slide-left"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, quaerat
-            accusantium fugit nostrum veniam porro.</div>
+        <div class="content slide-left"><h3> Eine simple <b> <h2><a href="https://jonasregener.de/crm-app" target ="_blank" rel="noreferrer noopener">CRM-App</a></h2></b> die auf Angular basiert.</h3></div>
     </div>
-    <div class="img-wrapper">
+
+   
+  <!--   <div class="img-wrapper">
         <img class="blur gray contain dogs" src="\assets\img\doggy.png">
-        <div class="content slide-right"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, quaerat
-            accusantium fugit nostrum veniam porro.</div>
-    </div>
+        <div class="content slide-right"> <h2><a href="https://jonasregener.de/doggybook" target ="_blank" rel="noreferrer noopener">Meine Hunde</a></h2></div>
+    </div> -->
 
 </div>
